CNSDEVCOLECT/force-app/main/default/objects/InformativoEEVV__mdt/InformativoEEVV__mdt.object-meta.xml
<CustomObject>
    <description>Sección para entregar información relevante a los EEVV</description>
    <label>Informativo EEVV</label>
    <pluralLabel>Informativo</pluralLabel>
</CustomObject>