CNSDEVCOLECT/force-app/main/default/objects/InformativoEEVV__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción de la sección a crear</description>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>