CNSDEVCOLECT/force-app/main/default/objects/InformativoEEVV__mdt/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <description>Titulo referente a la sección a agregar</description>
    <label>Titulo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>