CNSDEVCOLECT/force-app/main/default/objects/InformativoEEVV__mdt/fields/URL_informativa__c.field-meta.xml
<CustomField>
    <fullName>URL_informativa__c</fullName>
    <description>Url para rederigir a más información del ejecutivo</description>
    <label>URL informativa</label>
    <type>Url</type>
</CustomField>