CNSDEVCOLECT/force-app/main/default/objects/InformativoEEVV__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Titulo__c</columns>
    <columns>Descripcion__c</columns>
    <columns>URL_informativa__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>